overflow fix 2

--- a/personal-site/css/beta-main.css
+++ b/personal-site/css/beta-main.css
@@ -182,9 +182,9 @@ i.material-icons {
     margin: 10px;
 }
 
-.carousel-item{
-    overflow-y: auto;
-}
+/*.carousel-item{*/
+    /*overflow-y: auto;*/
+/*}*/
 
 .resume-png {
 
@@ -241,7 +241,7 @@ i.material-icons {
 
 @media screen and (max-width: 600px) {
     .carousel-item{
-        overflow-y: auto;
+        overflow-y: visible;
     }
 
     #carousel-title {
